@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Adjust alchemy danger computation: remove name length, but take into
+account weight and cursed or damned item status.
+Nicolas Weeger 2010-11-07
+
 Have singing honor the 'no_mood_change' flag.
 Nicolas Weeger 2010-11-06
 
